<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DroidDela</string>
    <string name="actions">Actions</string>
    <string name="status">Status</string>
    <string name="priority">Priority</string>
    <string name="begin">Begin</string>
    <string name="expires">Expires</string>
    <string name="title">Title</string>
    <string name="save">Save</string>
    <string name="enter_title">Enter title</string>
    <string name="action_add_task">Add Task</string>
    <string name="action_help">Help</string>
    <string name="action_notes">Notes</string>
    <string name="action_change">Change</string>
    <string name="action_delete">Delete</string>
    <string name="error_load_task">Error load task</string>

    <string-array name="priority">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>

    <string name="enter_notes">Enter notes</string>
    <string name="action_set_status">Set status</string>
    <string-array name="status">
        <item >New</item>
        <item >Performed</item>
        <item >Completed</item>
    </string-array>
    <string name="alarm">Alarm</string>
    <string name="repeating">Repeating</string>
    <string name="interval">Interval</string>
    <string name="value">Value</string>
    <string name="set_repeating_interval">Set repeating interval</string>
    <string name="value_in_minutes">Value in minutes</string>

</resources>