<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/task_notes"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/priority_high" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/field_wrapper_margin" >

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/title"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />
        
        <Button 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickSaveButton"
            android:text="@string/save"/>
        
    </LinearLayout>
    
    <EditText
        android:id="@+id/notes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/field_wrapper_margin"
        android:layout_weight="1"
        android:padding="@dimen/edit_text_padding"
        android:background="@android:color/white"
        android:gravity="top|left"
        android:hint="@string/enter_notes" />

</LinearLayout>