<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/icon_status"
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_height"
            android:layout_margin="@dimen/icon_margin"
            android:layout_marginRight="@dimen/icon_margin_right"
            android:contentDescription="@string/status"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text=""
            android:textSize="@dimen/title_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/field_wrapper_margin" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/label_right_margin"
            android:layout_weight="1"
            android:text="@string/begin"
            android:textSize="@dimen/datetime_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/datetime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text=""
            android:textSize="@dimen/datetime_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/field_wrapper_margin" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/label_right_margin"
            android:layout_weight="1"
            android:text="@string/expires"
            android:textSize="@dimen/datetime_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/expires"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text=""
            android:textSize="@dimen/datetime_text_size" />
    </LinearLayout>

</LinearLayout>